# gamlp-ami-agent-backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: orchestrator.py  prompts.py
app/agents/tools/: __init__.py  check_procedure_status.py  list_citizen_procedures.py  registry.py  schedule_reminder.py  search_internet.py  search_regulations.py  start_procedure.py  validate_document.py
app/api/v1/: dashboard.py  deps.py  documentos.py  health.py  normativa.py  recordatorios.py  router.py  tramites.py  webhooks.py
app/core/: config.py  exceptions.py  gemini_retry.py  logging.py  security.py
app/db/: base.py  session.py  types.py
app/ingestion/: chunking.py  ingest_normativa.py
app/integrations/: base.py  circuit_breaker.py  esitram_client.py  esitram_mock.py  factory.py  igob_client.py  igob_mock.py  whatsapp_client.py
app/models/: common.py  dashboard.py  documento.py  normativa.py  recordatorio.py  tramite.py  webhook.py
app/services/: conversacion_service.py  dashboard_service.py  documento_service.py  internet_search_service.py  rag_service.py  recordatorio_service.py  tramite_service.py
app/workers/: proactive_engine.py
docs/: api-contract.md  arquitectura.md  decisiones-tecnicas.md  guia-demo.md
docs/normativa/: ejemplo_licencia_funcionamiento.txt
scripts/: demo_reset.sh  seed_data.py  setup_whatsapp_menu.py
tests/: conftest.py
tests/integration/: test_dashboard_auth.py  test_health.py  test_tramites_api.py
tests/unit/: test_chunking.py  test_esitram_mock.py  test_gemini_retry.py  test_internet_search_service.py  test_rag_anti_hallucination.py  test_security.py  test_tool_registry.py  test_webhook_comandos.py
(+9 files in other folders)
