[project]
name = "ami-copiloto-backend"
version = "0.1.0"
description = "AMI Copiloto - agente conversacional de atencion ciudadana para el GAMLP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "chromadb>=0.5.5",
    "anthropic>=0.40.0",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "apscheduler>=3.10.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pypdf>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5.2",
    "black>=24.8.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "aiosqlite>=0.20.0",
    "types-passlib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "app/db/migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env_files = [".env.test"]
